--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,64 @@
 {% load static%}
 <html>
-
-
-
-
-
-
-
-
-
-
-	
 	<head>
 	<title> Oficina </title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	</head>
 
-	<body>
+	<body>  
+		<style>
+			.page{
+			display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #480ca8;
+    padding: 1rem;
+    margin-bottom: 1rem;
+
+			}
+		.elemento{
+		margin-bottom:70px
+			}
+		.elemento2{
+		margin-top:50px
+			}
+		</style>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">WEBOFICINA</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-		  
-			<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-			  <ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-				  <a class="nav-link" href="">Inicio <span class="sr-only">(página atual)</span></a>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="#">Link</a>
-				</li>
-				<li class="nav-item dropdown">
-				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Ir para
-				  </a>
-				  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">OS</a>
-					<a class="dropdown-item" href="#">Banco de Clientes</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Agenda</a>
-				  </div>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link disabled" href="#">Desativado</a>
-				</li>
-			  </ul>
-			  <form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-			  </form>
-			</div>
-		  </nav>
-		<h1> ola meu nome é marcos</h1>
-		<p>esse é o programa minha oficina</p>
-		<button type="button" class="btn btn-primary">Press</button>
+		
+			
+			<div class='page'>
+				<div class= 'row align-items-center elemento' >
+					<div class='col-md'>
+						<div class='card' >
+							<div class='card-body'>
+								<h1>Bem vindo, a WEBoficina</h1>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class='row align-items-center elemento2'>
+					<div class='col-sm'></div>	
+					<div class='col-md-12 align-self-center'>
+						<div class="card">
+  							<div class="card-body text-center">
+								<h1>Faça o login para continuar</h1>
+  							
+							
+								<a  href="{%url 'login'%}"><button class='btn btn-dark'>Ir para login</button></a>
+							</div>
+						</div>
+					</div>
+					<div class='col-sm'></div>
 	
-    
-
+				</div>
+			</div>
+			
 	</body>
 	</html>
