--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -1,45 +1,12 @@
+{% extends 'base.html'%}
 {%load static%}
-<html>
-	<head>
-	<title> Oficina </title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	</head>
+{% block content %}
+
 	<body>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="/">WEBOFICINA</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-			  	<span class="navbar-toggler-icon"></span>
-				</button>
-		  
-				<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-			  	<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-				  	<a class="nav-link" href="">Inicio <span class="sr-only">(página atual)</span></a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="banco" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					IR PARA
-				  	</a>
-				  	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">OS</a>	
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Banco de Clientes</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href= "{%url 'agenda'%}" >Agenda</a>
-				  	</div>
-					</li>
-			  	</ul>
-			  	<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-			  	</form>
-				</div>
-		  	</nav>
+		{%include 'partials/_navbar.html'%}
   			<style>
     			.gradient-bg {
       			background: linear-gradient(to bottom right, #FF6B6B, #FFC154);
@@ -120,5 +87,5 @@
   </div>
 
 	</body>
-</html>
+{% endblock %}
 
