--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,11 @@
 {%load static%}
-{%%}
 <html>
 	<head>
 	<title> Oficina </title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	</head>
-
-	<body>  	
-	{%block content %}
-
+	<body>
+		{% block content %}{% endblock %}
 	</body>
+</html>
